namespaces/live-1.cloud-platform.service.justice.gov.uk/support-labelling-webhook/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: support-labelling-webhook
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "prod"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "MOJ Digital"
    cloud-platform.justice.gov.uk/application: "support-labelling-webhook"
    cloud-platform.justice.gov.uk/owner: "Cloud Platform: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cloud-platform-support-labelling-webhook/"
    cloud-platform.justice.gov.uk/team-name: "cloud-platform"
    cloud-platform.justice.gov.uk/slack-channel: "cloud-platform"
